# mecha-wayland

./: Cargo.toml  README.md  build.rs  wayland.xml
.github/workflows/: benchmark.yml
crates/launcher/: Cargo.toml
crates/launcher/src/: event_manager.rs  lib.rs  main.rs  puffin.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: atlas.rs  gpu_image.rs  lib.rs  primitives.rs  scene.rs  surface.rs  text.rs
crates/utils/: Cargo.toml
crates/utils/src/: asset_manager.rs  font.rs  image.rs  lib.rs  shader.rs
crates/wayland-protocols/: Cargo.toml  build.rs
crates/wayland-protocols/benches/: frame.rs  mod.rs  multi_client_sync_roundtrip.rs  parse_wire_message.rs  sync_roundtrip.rs  wire_bench.rs
crates/wayland-protocols/examples/: basic_window.rs
crates/wayland-protocols/protocols/: linux-dmabuf-unstable-v1.xml
crates/wayland-protocols/src/: connection.rs  event_manager.rs  lib.rs  object.rs  spmc_queue.rs  wire.rs  wl_callback.rs  wl_display.rs  wl_pointer.rs  wl_registry.rs  wl_seat.rs  wl_shm.rs  wl_touch.rs  wlr_layer_shell.rs  xdg_surface.rs  xdg_toplevel.rs  xdg_wm_base.rs  zwp_linux_dmabuf.rs
src/: connection.rs  display.rs  main.rs  registry.rs  wire.rs  xdg.rs
