[package]
name = "basic_wayland_client"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nix = { version = "0.29", features = ["socket", "uio"] }

[build-dependencies]
anyhow = "1.0.101"
quick-xml = { version = "0.39.1", features = ["serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
