[package]
name = "launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
wayland-protocols = { path = "../wayland-protocols" }
renderer = { path = "../renderer" }
utils = { path = "../utils" }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
puffin_http = {version = "0.16.1", optional = true}
puffin = {version = "0.19.1", optional = true}

[features]
default = []
profile = ["dep:puffin", "dep:puffin_http"]
