[package]
name = "wayland-protocols"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nix = { workspace = true }
io-uring = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "wayland-protocols"
path = "benches/mod.rs"
harness = false

[build-dependencies]
anyhow = { workspace = true }
quick-xml = { workspace = true }
serde = { workspace = true }
